Add a web API and a console-based event log

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "app-compositor": "^0.4.0",
     "bcrypt": "^1.0.2",
-    "esdf": "^0.2.0"
+    "esdf": "^0.2.1",
+    "restify": "^5.0.0"
   },
   "devDependencies": {
     "documentation": "^4.0.0-rc.1",
