--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "bcrypt": "^1.0.2",
     "esdf": "^0.2.1",
     "firebase": "^4.1.3",
-    "restify": "^5.0.0"
+    "jsonwebtoken": "^7.4.1",
+    "restify": "^5.0.0",
+    "restify-cookies": "^0.2.2"
   },
   "devDependencies": {
     "documentation": "^4.0.0-rc.1",
