--- a/package.json
+++ b/package.json
@@ -14,11 +14,18 @@
     "esdf": "^0.2.1",
     "firebase": "^4.1.3",
     "jsonwebtoken": "^7.4.1",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "restify": "^5.0.0",
     "restify-cookies": "^0.2.2"
   },
   "devDependencies": {
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "documentation": "^4.0.0-rc.1",
-    "mocha": "^3.4.2"
+    "mocha": "^3.4.2",
+    "webpack": "^3.2.0"
   }
 }
