--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "app-compositor": "^0.4.0",
     "bcrypt": "^1.0.2",
+    "date-fns": "^1.28.5",
     "esdf": "^0.2.1",
     "firebase": "^4.1.3",
     "jsonwebtoken": "^7.4.1",
